refactoring: add loader module and refactor methods

--- a/data.yml
+++ b/data.yml
@@ -1,245 +1,246 @@
 --- !ruby/object:Library
-books:
-- !ruby/object:Book
-  title: Everything is Illuminated
-  author: &1 !ruby/object:Author
-    name: Alfonso Harber
-    biography: Adipisci voluptatum aut aperiam provident expedita et.
-- &7 !ruby/object:Book
-  title: Have His Carcase
-  author: &25 !ruby/object:Author
-    name: Reyna Schmitt
-    biography: Magni vitae voluptatem atque soluta distinctio.
-- !ruby/object:Book
-  title: For a Breath I Tarry
-  author: &26 !ruby/object:Author
-    name: Isidro Jaskolski
-    biography: Eveniet magnam vitae veritatis ea et.
-- &5 !ruby/object:Book
-  title: The Daffodil Sky
-  author: &28 !ruby/object:Author
-    name: Lenny Collins
-    biography: In magni et ut quo.
-- &16 !ruby/object:Book
-  title: Waiting for the Barbarians
-  author: &2 !ruby/object:Author
-    name: Dr. Barrett Cormier
-    biography: Ut in tempora et consequatur.
-- &11 !ruby/object:Book
-  title: Taming a Sea Horse
-  author: *1
-- !ruby/object:Book
-  title: The Stars' Tennis Balls
-  author: &22 !ruby/object:Author
-    name: Luther Parker
-    biography: Esse repellendus pariatur aspernatur doloremque veniam et.
-- !ruby/object:Book
-  title: The Heart Is Deceitful Above All Things
-  author: &3 !ruby/object:Author
-    name: Francisca Hackett I
-    biography: Ipsum asperiores expedita quod.
-- !ruby/object:Book
-  title: Time of our Darkness
-  author: &24 !ruby/object:Author
-    name: Lolita Marvin PhD
-    biography: Officiis provident suscipit distinctio esse ut asperiores laborum.
-- &8 !ruby/object:Book
-  title: All the King's Men
-  author: *2
-- &13 !ruby/object:Book
-  title: Absalom, Absalom!
-  author: *2
-- &9 !ruby/object:Book
-  title: Number the Stars
-  author: &23 !ruby/object:Author
-    name: Gregory Hilll PhD
-    biography: Eum magnam explicabo nam quasi dolores.
-- &6 !ruby/object:Book
-  title: Cabbages and Kings
-  author: &27 !ruby/object:Author
-    name: Elisabeth Ziemann DDS
-    biography: Repudiandae ipsam expedita voluptatem accusamus.
-- !ruby/object:Book
-  title: The Torment of Others
-  author: *3
-- &4 !ruby/object:Book
-  title: A Time to Kill
-  author: *3
+authors:
+- &1 !ruby/object:Author
+  name: Kareem Adams
+  biography: Totam aspernatur occaecati cum aut neque unde itaque assumenda.
+- &12 !ruby/object:Author
+  name: Corbin Bashirian
+  biography: Deserunt qui voluptatem est et qui repellendus voluptatum nulla.
+- &4 !ruby/object:Author
+  name: Maurice Muller
+  biography: Maxime sed suscipit inventore voluptatibus repudiandae optio.
+- &22 !ruby/object:Author
+  name: Miss Everett Zemlak
+  biography: Deserunt voluptas sed placeat vel tempora.
+- &20 !ruby/object:Author
+  name: Guiseppe Towne
+  biography: Quia facere quia impedit corrupti tenetur rerum nobis quidem.
+- &16 !ruby/object:Author
+  name: Valerie Dibbert
+  biography: In qui doloremque sit atque nostrum optio consequuntur.
+- &25 !ruby/object:Author
+  name: Theo Rice
+  biography: Distinctio est beatae libero ut esse laudantium itaque cumque.
+- !ruby/object:Author
+  name: Thomas Monahan
+  biography: Molestias illum repudiandae ut voluptas.
+- !ruby/object:Author
+  name: Mrs. Reina Predovic
+  biography: Et ipsam et debitis quibusdam nulla et quia maiores.
+- &15 !ruby/object:Author
+  name: Gwendolyn Abernathy
+  biography: Sed praesentium perferendis quod nesciunt veniam magni totam.
+- &24 !ruby/object:Author
+  name: Carmelo Wiza
+  biography: Dolorem quia voluptas libero dolorum.
+- !ruby/object:Author
+  name: Elvie Bosco
+  biography: Veritatis repellat qui aut laudantium voluptate eos architecto numquam.
+- &26 !ruby/object:Author
+  name: Gaston Mosciski IV
+  biography: Explicabo aut et laudantium hic praesentium.
+- &27 !ruby/object:Author
+  name: Mrs. Dina Cronin
+  biography: Sed illo ut ducimus sint earum consequatur qui.
+- !ruby/object:Author
+  name: Dr. Benedict Stokes
+  biography: Assumenda necessitatibus aspernatur quia dolor temporibus ipsa ipsum
+    aut.
+readers:
+- &2 !ruby/object:Reader
+  name: Jimmie Hansen
+  email: billie_gibson@medhurstcole.net
+  city: West Eve
+  street: Sanford Club
+  house: '656'
+- &8 !ruby/object:Reader
+  name: Lilian Bednar
+  email: michale_champlin@hyattbeier.com
+  city: West Calemouth
+  street: Kiarra Track
+  house: '27241'
+- &14 !ruby/object:Reader
+  name: Edmond Kassulke DVM
+  email: kathleen@pagac.name
+  city: South Amiyaton
+  street: Walter Common
+  house: '17718'
+- &11 !ruby/object:Reader
+  name: Maximus Larkin
+  email: gardner_kovacek@ratke.io
+  city: Garfieldton
+  street: Dibbert Views
+  house: '389'
+- &5 !ruby/object:Reader
+  name: Giovanni McDermott
+  email: dana@gaylord.biz
+  city: Port Edwinfort
+  street: Keanu Divide
+  house: '5855'
+- &7 !ruby/object:Reader
+  name: Meghan Larson
+  email: fermin.davis@oharakeeling.biz
+  city: Everettmouth
+  street: Scottie Knoll
+  house: '2196'
+- !ruby/object:Reader
+  name: Gust Gottlieb
+  email: ozzie@townegerlach.io
+  city: West Ritaland
+  street: Justus Trafficway
+  house: '33830'
+- &9 !ruby/object:Reader
+  name: Tyree Weber
+  email: kylee@schultz.org
+  city: Port Reynoldhaven
+  street: Price River
+  house: '80943'
+- !ruby/object:Reader
+  name: Caden Kerluke Jr.
+  email: wanda@moriette.org
+  city: Blancabury
+  street: Zachary Fork
+  house: '81896'
+- &13 !ruby/object:Reader
+  name: Jasmin Rowe III
+  email: greg@damore.org
+  city: Linastad
+  street: Daugherty Corner
+  house: '53661'
+- !ruby/object:Reader
+  name: Joannie Hayes
+  email: howell@fisher.net
+  city: Dedricton
+  street: Little Turnpike
+  house: '48619'
+- !ruby/object:Reader
+  name: Dan McKenzie PhD
+  email: adan@rowe.net
+  city: Port Mckennaview
+  street: Hank Hills
+  house: '817'
+- !ruby/object:Reader
+  name: Dr. Dariana Aufderhar
+  email: jacey.auer@davisyost.biz
+  city: West Darylfort
+  street: Javier Light
+  house: '800'
+- !ruby/object:Reader
+  name: Kelley Hoppe
+  email: brook.ebert@ebertrosenbaum.com
+  city: Mackland
+  street: Harber Turnpike
+  house: '137'
+- !ruby/object:Reader
+  name: Maritza Welch
+  email: sabrina@greenfelder.co
+  city: Margeberg
+  street: Zemlak Shoal
+  house: '412'
 orders:
 - !ruby/object:Order
-  book: *4
-  reader: &20 !ruby/object:Reader
-    name: Tremayne Rosenbaum
-    email: kody_predovic@eichmann.io
-    city: New Deionview
-    street: Kuphal Avenue
-    house: '2798'
-  date: 2016-11-02
+  book: &3 !ruby/object:Book
+    title: The Wives of Bath
+    author: *1
+  reader: *2
+  date: 2016-11-30
 - !ruby/object:Order
-  book: *5
-  reader: &17 !ruby/object:Reader
-    name: Rollin Breitenberg
-    email: michel.kemmer@weimanngreenholt.io
-    city: Mckennaberg
-    street: Guy Lock
-    house: '78228'
-  date: 2016-11-05
+  book: &18 !ruby/object:Book
+    title: Look to Windward
+    author: *1
+  reader: *2
+  date: 2016-11-28
 - !ruby/object:Order
-  book: *6
-  reader: &15 !ruby/object:Reader
-    name: Noe Dach
-    email: lambert.gaylord@hirtherenner.co
-    city: South Craig
-    street: Clarissa Ways
-    house: '577'
-  date: 2016-11-11
+  book: *3
+  reader: *2
+  date: 2016-12-01
 - !ruby/object:Order
-  book: *7
-  reader: &12 !ruby/object:Reader
-    name: Nannie Schmeler
-    email: columbus_howe@erdman.org
-    city: Columbusbury
-    street: Jannie Avenue
-    house: '724'
-  date: 2016-11-05
+  book: *3
+  reader: *2
+  date: 2016-11-26
 - !ruby/object:Order
-  book: *8
-  reader: &21 !ruby/object:Reader
-    name: Dusty Welch
-    email: freddy.hoppe@pfannerstill.com
-    city: South Charleyview
-    street: Mraz Oval
-    house: '3372'
-  date: 2016-11-10
-- !ruby/object:Order
-  book: *7
-  reader: &10 !ruby/object:Reader
-    name: Herbert Schuster I
-    email: emerson.wiegand@dickens.co
-    city: Lake Gabriella
-    street: Kailyn Falls
-    house: '83123'
-  date: 2016-11-06
-- !ruby/object:Order
-  book: *9
-  reader: &18 !ruby/object:Reader
-    name: Jed Leannon
-    email: pietro@mcglynn.org
-    city: New Elvie
-    street: Cesar Park
-    house: '6995'
-  date: 2016-11-13
-- !ruby/object:Order
-  book: *4
-  reader: *10
-  date: 2016-11-11
+  book: &6 !ruby/object:Book
+    title: Have His Carcase
+    author: *4
+  reader: *5
+  date: 2016-11-23
 - !ruby/object:Order
   book: *6
-  reader: &14 !ruby/object:Reader
-    name: Ayana Miller
-    email: mafalda.von@harberquigley.name
-    city: Weimannfort
-    street: Ervin Villages
-    house: '181'
-  date: 2016-11-05
+  reader: *7
+  date: 2016-11-21
 - !ruby/object:Order
-  book: *11
-  reader: *12
-  date: 2016-11-07
+  book: &10 !ruby/object:Book
+    title: To Sail Beyond the Sunset
+    author: *4
+  reader: *8
+  date: 2016-11-19
 - !ruby/object:Order
-  book: *13
+  book: *3
+  reader: *9
+  date: 2016-11-21
+- !ruby/object:Order
+  book: *10
+  reader: *11
+  date: 2016-11-24
+- !ruby/object:Order
+  book: &19 !ruby/object:Book
+    title: Arms and the Man
+    author: *12
+  reader: *7
+  date: 2016-11-26
+- !ruby/object:Order
+  book: &17 !ruby/object:Book
+    title: In Death Ground
+    author: *4
+  reader: *13
+  date: 2016-11-22
+- !ruby/object:Order
+  book: *3
   reader: *14
-  date: 2016-11-14
+  date: 2016-11-23
 - !ruby/object:Order
-  book: *11
-  reader: &19 !ruby/object:Reader
-    name: Hiram Ratke
-    email: glennie.vandervort@lubowitzruecker.info
-    city: Myrtleview
-    street: Monique Turnpike
-    house: '53711'
-  date: 2016-11-06
+  book: &23 !ruby/object:Book
+    title: That Good Night
+    author: *15
+  reader: *8
+  date: 2016-11-29
 - !ruby/object:Order
-  book: *11
-  reader: *14
-  date: 2016-11-12
+  book: &21 !ruby/object:Book
+    title: No Longer at Ease
+    author: *16
+  reader: *2
+  date: 2016-11-30
 - !ruby/object:Order
-  book: *6
-  reader: *15
-  date: 2016-11-04
-- !ruby/object:Order
-  book: *16
-  reader: *17
-  date: 2016-11-11
-readers:
-- !ruby/object:Reader
-  name: Emily Hermann
-  email: noah@ritchielegros.co
-  city: Jaredfort
-  street: Iva Lodge
-  house: '973'
-- *10
-- !ruby/object:Reader
-  name: Tracy Gaylord
-  email: felipa@bechtelar.name
-  city: West Virginiaview
-  street: Easton Inlet
-  house: '3667'
-- !ruby/object:Reader
-  name: Brisa Lockman
-  email: terrence@breitenbergblanda.biz
-  city: Bradleyberg
-  street: Lucious Expressway
-  house: '3272'
-- *14
-- *18
-- *19
-- !ruby/object:Reader
-  name: Amira Kuvalis
-  email: samir@harris.info
-  city: East Hunter
-  street: Doyle Club
-  house: '983'
-- *20
-- *12
-- *15
-- *21
-- *17
-- !ruby/object:Reader
-  name: Dr. Madyson Crona
-  email: estrella@mcglynn.biz
-  city: Lake Anyaborough
-  street: Leonard Village
-  house: '9942'
-- !ruby/object:Reader
-  name: Fay Beier
-  email: dayne@prosacco.io
-  city: Stokestown
-  street: Bridie Stravenue
-  house: '36623'
-authors:
-- !ruby/object:Author
-  name: Wilford Fadel III
-  biography: Porro iusto provident consectetur.
-- !ruby/object:Author
-  name: Maximo Gutkowski
-  biography: Ullam voluptate ut voluptatem et sint.
-- *2
-- *22
-- *23
-- *24
-- *25
-- !ruby/object:Author
-  name: Bryana Prohaska
-  biography: Velit itaque et sit maxime necessitatibus in voluptas.
-- !ruby/object:Author
-  name: Dean Abbott DVM
-  biography: Est laborum dolorem ratione saepe voluptas.
+  book: *17
+  reader: *8
+  date: 2016-11-26
+books:
 - *3
-- *26
-- *27
-- *1
-- !ruby/object:Author
-  name: Ms. Leann Mosciski
-  biography: Quaerat harum ratione incidunt nihil omnis qui nam.
-- *28
+- *18
+- !ruby/object:Book
+  title: Shall not Perish
+  author: *1
+- *6
+- *19
+- !ruby/object:Book
+  title: The Little Foxes
+  author: *20
+- *10
+- *17
+- *21
+- !ruby/object:Book
+  title: The Far-Distant Oxus
+  author: *22
+- *23
+- !ruby/object:Book
+  title: A Catskill Eagle
+  author: *24
+- !ruby/object:Book
+  title: The Widening Gyre
+  author: *25
+- !ruby/object:Book
+  title: The Road Less Traveled
+  author: *26
+- !ruby/object:Book
+  title: To Say Nothing of the Dog
+  author: *27
